# tango

./: .dockerignore  .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile.test  Makefile  README.md  RELEASE_PROCESS.md  check_spawn.py  constraints.txt  dev-requirements.txt  integrations-requirements.txt  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  templates.pkl
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  documentation.yml
.github/workflows/: changelog.yml  ci.yml  docker.yml  docker_testing.yml  integration_tests.yml  main.yml  update_dependency_pr.yml
docs/source/: CHANGELOG.md  CONTRIBUTING.md  conf.py  faq.md  first_steps.md  index.md  index.rst  installation.md  overview.md
docs/source/api/: commands.rst  det_hash.rst  exceptions.rst  logging.rst  sequences.rst  settings.rst  steps.rst  utilities.rst
docs/source/examples/: euler.md  eval_p3.md  index.rst  train_gpt2.md  train_lm.md
docs/source/guides/: training_at_scale.md
examples/euler/: README.md  euler.jsonnet  euler_general.jsonnet  run.sh
examples/eval_p3/: README.md  config.jsonnet  eval.py
examples/finetune/: config.jsonnet  config_gpt2.jsonnet  new_config.jsonnet  rte.jsonnet  rte.py  snli_steps.py  test.py
examples/finetune_resent/: components.py  config.jsonnet
examples/finetune_resnet/: .gitignore  README.md  components.py  config.jsonnet  resnet_steps.py  run.sh  test.py
examples/flax/: config.jsonnet  run.sh  xsum.py
examples/train_gpt2/: .gitignore  README.md  components.py  config-deepspeed.jsonnet  config-fairscale.jsonnet  config.jsonnet  requirements.txt  test.py
examples/train_lm/: README.md  components.py  config-deepspeed.jsonnet  config-fairscale.jsonnet  config.jsonnet  test.py  tokenize.py  tokenize_step.py
integration_tests/: README.md
integration_tests/fairscale_benchmarks/: README.md  config.jsonnet  run.sh
local-workspace/: latest  settings.json  stepinfo.sqlite
local-workspace/cache/ConcatStringsStep-4iG3gm8pXSwTXW5TEx7EPa9YRpUE1S9T/: cache-metadata.json
report/: index.css  index.html  index.js  report.css  report.html  report.js
runs/runs/worthy-feline/: hello  hello_world
scripts/: beaker_common.py  beaker_submit_gpu_tests.py  entrypoint.sh  hash_extras.py  prepare_changelog.py  prepare_citation_cff.py  release.sh  release_notes.py
tango/: __init__.py  __main__.py  cli.py  executor.py  format.py  local_workspace.py  multicore_executor.py  settings.py  sqlite_dict_format.py  step.py  step_cache.py  step_graph.py  step_graph_new.py  step_info.py  sweeps.py  sweeps_test.ipynb  version.py  workspace.py  workspace_server.py
tango/common/: __init__.py  _det_hash.py  aliases.py  dataset_dict.py  det_hash.py  exceptions.py  file_lock.py  from_params.py  lazy.py  logging.py  params.py  registrable.py  remote_utils.py  sequences.py  sqlite_sparse_sequence.py  testing.py  tqdm.py  util.py
tango/common/testing/: __init__.py  steps.py
tango/executors/: __init__.py  executor.py  multicore_executor.py
tango/integrations/: __init__.py
tango/integrations/beaker/: __init__.py  common.py  entrypoint.sh  executor.py  step_cache.py  util.py  workspace.py
tango/integrations/datasets/: __init__.py
tango/integrations/deepspeed/: __init__.py  accelerator.py  optim.py  train_engine.py
tango/integrations/fairscale/: __init__.py  accelerator.py  fsdp_config.py  module_wrapper.py  train_engine.py  training_engine.py
tango/integrations/flax/: __init__.py  data.py  eval.py  eval_callback.py  format.py  loss.py  model.py  optim.py  train.py  train_callback.py  train_config.py  train_state.py  util.py  wrapper.py
tango/integrations/gcs/: common.py  step_cache.py  util.py  workspace.py
tango/integrations/gs/: __init__.py  (+4 more)
tango/server/: global.css  index.css  index.html  index.js  report.css  report.html  report.js  workspace_server.py
tango/step_caches/: __init__.py  local_step_cache.py  memory_step_cache.py  remote_step_cache.py
tango/steps/: __init__.py  complex_arithmetic.py  dataset_remix.py  print.py  shell_step.py
tango/workspaces/: __init__.py  local_workspace.py  memory_workspace.py  remote_workspace.py
test_fixtures/beaker/: nvidia_smi.yml
test_fixtures/common/: params_example.jsonnet  params_example.yaml
test_fixtures/experiment/: hello_world.jsonnet  logging_check.jsonnet  multiprocessing.jsonnet  noisy.jsonnet  random.jsonnet  sleep.jsonnet
test_fixtures/package/: steps.py
tests/: executor_test.py  format_test.py  local_workspace_test.py  main_test.py  multicore_executor_test.py  step_graph.py  step_graph_test.py  step_info_test.py  step_test.py  workspace_test.py
tests/common/: dataset_dict_test.py  det_hash_test.py  from_params_pep_563_test.py  from_params_test.py  params_test.py  registrable_test.py  sequences_test.py  sqlite_sparse_sequence_test.py  util_test.py
tests/end_to_end/: test_dataset_dict_from_seperate_steps.py  test_lazy_input_with_another_step.py  test_multicore_cli.py  test_non_cacheable_into_cacheable_multiple_runs.py  test_registered_runs.py  test_run_single_step.py  test_step_indexing.py  test_steps_that_fail.py  test_uncacheable_leaf_steps.py
tests/executors/: executor_test.py  multicore_executor_test.py
tests/step_caches/: local_step_cache_test.py
tests/steps/: dataset_remix_test.py  shell_step_test.py
tests/workspaces/: local_workspace_cache_remove_test.py  local_workspace_test.py  memory_workspace_cache_remove_test.py  memory_workspace_test.py
(+154 files in other folders)
